--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@hapi/joi": "^16.1.4",
     "async": "*",
     "body-parser": "1.x",
     "client-http": "*",
@@ -12,7 +11,9 @@
     "express": "4.x",
     "https": "^1.0.0",
     "morgan": "^1.9.1",
+    "mysql": "^2.18.1",
     "rotating-file-stream": "^1.4.3",
+    "sequelize": "^6.6.5",
     "socket.io": "^2.1.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.0.0"
