--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "4.x",
     "https": "^1.0.0",
     "morgan": "^1.9.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "rotating-file-stream": "^1.4.3",
     "sequelize": "^6.6.5",
     "socket.io": "^2.1.1",
